[package]
name = "ligen-ue4blueprint"
version = "0.1.0"
authors = ["Danilo Guanabara <danguafer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen = { path = "../ligen" }
ligen-core = { path = "../ligen-core" }
ligen-c = { path = "../ligen-c" }
ligen-cpp = { path = "../ligen-cpp" }
